# nalperion_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  licensor.rs  main.rs  nalperion.rs
tools/: shafer_filechk.hbs
